k8s-demo-platform/chaos/manifests/network-partition-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-partition-order-to-payment
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: inventory-service
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: notification-service
      ports:
        - protocol: TCP
          port: 8080
